generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
}

enum Role {
  TEAM_MEMBER
  MANAGER
  ADMIN
}

enum ReportStatus {
  DRAFT
  SUBMITTED
  LATE
}

// Team Member signups are auto-approved; Manager/Admin signups start PENDING
// and can't log in until an existing Admin approves them (see auth.ts authorize()).
enum ApprovalStatus {
  APPROVED
  PENDING
  REJECTED
}

model User {
  id               String         @id @default(cuid())
  name             String
  email            String         @unique
  password         String
  role             Role           @default(TEAM_MEMBER)
  approvalStatus   ApprovalStatus @default(APPROVED)
  reports          WeeklyReport[]
  projects         UserProject[]
  createdAt        DateTime       @default(now())
  updatedAt        DateTime       @updatedAt
}

model Project {
  id          String   @id @default(cuid())
  name        String
  description String?
  reports     WeeklyReport[]
  members     UserProject[]
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
}

model UserProject {
  id        String   @id @default(cuid())
  userId    String
  projectId String
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  project   Project  @relation(fields: [projectId], references: [id], onDelete: Cascade)
  createdAt DateTime @default(now())
  @@unique([userId, projectId])
}

model WeeklyReport {
  id             String       @id @default(cuid())
  userId         String
  projectId      String
  weekStartDate  DateTime
  weekEndDate    DateTime
  tasksCompleted String
  tasksPlanned   String
  blockers       String?
  hoursWorked    Int?
  notes          String?
  status         ReportStatus @default(DRAFT)
  submittedAt    DateTime?
  user           User         @relation(fields: [userId], references: [id], onDelete: Cascade)
  project        Project      @relation(fields: [projectId], references: [id], onDelete: Cascade)
  createdAt      DateTime     @default(now())
  updatedAt      DateTime     @updatedAt
}
